2020-07-16  Jer Noble  <jer.noble@apple.com>

        Unreviewed build fix after r264492; previously dead code in RTCNativeI420Buffer.mm was
        revivified after a project file fix which stopped setting NDEBUG for debug builds in
        libwebrc. Delete this undead code, which would have always caused build errors if it was
        ever compiled.

        * Source/webrtc/sdk/objc/api/video_frame_buffer/RTCNativeI420Buffer.mm:
        (-[RTCI420Buffer debugQuickLookObject]): Deleted.

2020-07-16  Jer Noble  <jer.noble@apple.com>

        Integrate libwebm into the libwebrtc project.
        https://bugs.webkit.org/show_bug.cgi?id=214410

        Reviewed by Eric Carlson.

        Add the libwebm and resulting static library target to libwebrtc.

        Drive-by fix: update the DebugRelease.xcconfig to set the correct DEBUG_DEFINES and GCC_OPTIMIZATION_LEVEL
        when building the Debug configuration.

        * Configurations/DebugRelease.xcconfig:
        * Configurations/libwebm.xcconfig: Added.
        * Configurations/libwebrtc.xcconfig:
        * Configurations/libwebrtc.iOS.exp:
        * Configurations/libwebrtc.iOSsim.exp:
        * Configurations/libwebrtc.mac.exp:
        * Source/third_party/libwebm/AUTHORS.TXT: Added.
        * Source/third_party/libwebm/Android.mk: Added.
        * Source/third_party/libwebm/CMakeLists.txt: Added.
        * Source/third_party/libwebm/LICENSE.TXT: Added.
        * Source/third_party/libwebm/Makefile.unix: Added.
        * Source/third_party/libwebm/PATENTS.TXT: Added.
        * Source/third_party/libwebm/README.libwebm: Added.
        * Source/third_party/libwebm/codereview.settings: Added.
        * Source/third_party/libwebm/common/common.sh: Added.
        * Source/third_party/libwebm/common/file_util.cc: Added.
        * Source/third_party/libwebm/common/file_util.h: Added.
        (libwebm::TempFileDeleter::TempFileDeleter):
        (libwebm::TempFileDeleter::name const):